# yourmusic-mcp

./: .gitignore  CHANGELOG.md  CHECKLIST.md  LICENSE  PROJECT_STRUCTURE.md  README.md  RELEASE_GUIDE.md  cleanup.sh  inspector.sh.example  install.sh  pyproject.toml  release.sh  requirements.txt
musicmcp_ai_mcp/: api.py
tests/: test_api.py  test_query.py
yourmusic_fun_mcp/: __init__.py  __main__.py  api.py
